added current commic fetch

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,10 +29,6 @@
         </div>
     </nav>
 
-    <!--Insert to load image-->
-
-    
-    <!--insert to load image-->
 
    <!--Jumbotron-->
     <div class="jumbotron bg-dark text-white"">
@@ -41,8 +37,13 @@
         <!--<a class="btn btn-primary btn-lg" href="/randomComic" role="button">Get a random comic</a>-->
     </div>
   
+    <!--Insert to load image-->
+     
+    <div class="CurrentCommic">
+        
+    </diV>
+    <!--insert to load image-->
 
-    <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
