added more fetch data

--- a/views/currentComic.ejs
+++ b/views/currentComic.ejs
@@ -29,14 +29,14 @@
         </div>
     </nav>
 
-
-   <!--Jumbotron-->
-    <div class="jumbotron bg-dark text-white"">
-        <h1 class="display-4"> Welcome to the Comic Generator</h1>
-        <hr class="my-4">
-        <!--<a class="btn btn-primary btn-lg" href="/randomComic" role="button">Get a random comic</a>-->
-    </div>
-  
+    <!-- to get and display data-->
+    <%= data.month %> 
+    <%= data.day %>
+    <%= data.year %> 
+    <%= data.num %> 
+    <%= data.safe_title %> 
+    <img src="<%=data.img%>" alt="<%= data.alt %> " width="500" height="600"
+    
 
 
     <!-- Optional JavaScript -->
