--- a/views/currentComic.ejs
+++ b/views/currentComic.ejs
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Welcome to the Website!</title>
+    <title>Current Comic</title>
   </head>
   <body>
   <!--Navigation bar-->
@@ -20,11 +20,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item" th:classappend="${content} == 'home' ? 'active' : ''">
-                <a class="nav-link" href="/">Home <span class="sr-only" th:if="${content} == 'home'">(current)</span></a>
+                <a class="nav-link" href="/">Home <span class="sr-only" th:if="${content} == 'home'"></span></a>
             </li>
-           <!-- <li class="nav-item" th:classappend="${content} == 'contact' ? 'active' : ''">
-                <a class="nav-link" href="/randomComic">Random <span class="sr-only" th:if="${content} == 'contact'">(current)</span></a>
-            </li> -->
+           <li class="nav-item" th:classappend="${content} == 'contact' ? 'active' : ''">
+                <a class="nav-link" href="/currentComic">Curent Comic<span class="sr-only" th:if="${content} == 'currentComic'">(current)</span></a>
+            </li> 
+           <li class="nav-item" th:classappend="${content} == 'contact' ? 'active' : ''">
+                <a class="nav-link" href="/randomComic">Random Comic<span class="sr-only" th:if="${content} == 'randomComic'"></span></a>
+            </li> 
             </ul>
         </div>
     </nav>
