fixed random gen

--- a/views/currentComic.ejs
+++ b/views/currentComic.ejs
@@ -38,7 +38,7 @@
     <%= data.year %> 
     <%= data.num %> 
     <%= data.safe_title %> 
-    <img src="<%=data.img%>" alt="<%= data.alt %> " width="500" height="600"
+    <img src="<%=data.img%>" alt="<%= data.alt %> " max-width="300" max-height="500">
     
 
 
