--- a/views/currentComic.ejs
+++ b/views/currentComic.ejs
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+        <link rel="stylesheet" href="public/styles.css">
+
     <title>Current Comic</title>
   </head>
   <body>
@@ -38,7 +40,7 @@
     <%= data.year %> 
     <%= data.num %> 
     <%= data.safe_title %> 
-    <img src="<%=data.img%>" alt="<%= data.alt %> " max-width="300" max-height="500">
+    <img src="<%=data.img%>" alt="<%= data.alt %> " max-width="300" max-height="500" style="float: right";>
     
 
 
