--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 
     <title>Welcome to the Website!</title>
   </head>
-  <body>
+  <body  style="  background-color:#d3d8e0; ">
   <!--Navigation bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Midterm</a>
@@ -42,6 +42,8 @@
         <hr class="my-4">
         <!--<a class="btn btn-primary btn-lg" href="/randomComic" role="button">Get a random comic</a>-->
     </div>
+
+
   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
