--- a/views/randomComic.ejs
+++ b/views/randomComic.ejs
@@ -12,7 +12,7 @@
 
     <title>Random Comic</title>
   </head>
-  <body>
+  <body style="  background-color:#d3d8e0; ">
   <!--Navigation bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Midterm</a>
@@ -34,16 +34,22 @@
         </div>
     </nav>
 
+    <div class="RandomH" style="height:100px; margin-top:20px; font-style:bold; text-decoration:underline; text-align:center; color:black;">
+        <h2>The following is the information about your random comic:</h2>
+    </div>
+
     <!-- to get and display data-->
-    <div class = "DesctipR">
-    <h1> <%= data.month %> + / + <%= data.day %> + / <%= data.year %> </h1>
-    <h2> Comic Num :  <%= data.num %> </h2>
-    <h3> Comic Title <%= data.safe_title %> <h3>
+    <div class = "DesctipR" style="size: 20px; ; text-align:center; ">
+    <h1 style="font-weight:normal; size:30px; "> Date: <%= data.month %>  /  <%= data.day %>  / <%= data.year %> </h1>
+    <h2 style="font-weight:normal; size:30px; " > Comic Num :  <%= data.num %> </h2>
+    <h3 style="font-weight:normal; size:30px;"> Comic Title: <%= data.safe_title %> <h3>
     </div>
     
-    <img src="<%=data.img%>" alt="<%= data.alt %> " width="500" height="600" max-width="300" max-height="500" style="position: absolute; left: 60%;">
+    <center><img src="<%=data.img%>" alt="<%= data.alt %> " max-width="300" max-height="500" style="margin-top:20px;"> </center>
     
 
+    <!--button on click to get random image-->
+   
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
