--- a/views/randomComic.ejs
+++ b/views/randomComic.ejs
@@ -36,21 +36,21 @@
 
     <div class="RandomH" style="height:100px; margin-top:20px; font-style:bold; text-decoration:underline; text-align:center; color:black;">
         <h2>The following is the information about your random comic:</h2>
+
+    <!--button on click to get random image-->
+    <center><a style=" margin-top: 5px;"class="btn btn-primary btn-lg" href="/randomComic" role="button"> Random Comic </a></center>
     </div>
 
     <!-- to get and display data-->
-    <div class = "DesctipR" style="size: 20px; ; text-align:center; ">
-    <h1 style="font-weight:normal; size:30px; "> Date: <%= data.month %>  /  <%= data.day %>  / <%= data.year %> </h1>
-    <h2 style="font-weight:normal; size:30px; " > Comic Num :  <%= data.num %> </h2>
-    <h3 style="font-weight:normal; size:30px;"> Comic Title: <%= data.safe_title %> <h3>
+    <div class = "DesctipC" style="text-align:center; ">
+    <h1 style="font-weight:normal; font-size:30px;"> <b>Date: </b> <%= data.month %>  /  <%= data.day %>  / <%= data.year %> </h1>
+    <h2 style="font-weight:normal; font-size::30px;"> <b>Comic Num:</b>  <%= data.num %> </h2>
+    <h3 style="font-weight:normal; font-size:30px;"> <b>Comic Title:</b> <%= data.safe_title %> <h3>
     </div>
     
     <center><img src="<%=data.img%>" alt="<%= data.alt %> " max-width="300" max-height="500" style="margin-top:20px;"> </center>
     
-
-    <!--button on click to get random image-->
-   
-
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
