--- a/views/randomComic.ejs
+++ b/views/randomComic.ejs
@@ -35,9 +35,9 @@
     <!--Jumbotron-->
     <div class="jumbotron bg-dark text-white"">
         <h1 class="display-4"> Random Comic</h1>
-        <p class="lead">Please enjoy the random comic generated for you or you can click the random button to keep generating more comics.</p>
+        <p class="lead"></p>
         <hr class="my-4">
-        <hr class="my-4">
+        <p>Please enjoy the random comic generated for you or you can click the random button to keep generating more comics. </p>
     </div> 
 
     <div class="RandomH" style="height:100px; margin-top:20px; font-style:bold; text-decoration:underline; text-align:center; color:black;">
