--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,10 +49,12 @@
         <h1 style="font-weight:normal; font-size:30px;"> <b>Date: </b> <%= data.month %>  /  <%= data.day %>  / <%= data.year %> </h1>
         <h2 style="font-weight:normal; font-size::30px;"> <b>Comic Num:</b>  <%= data.num %> </h2>
         <h3 style="font-weight:normal; font-size:30px;"> <b>Comic Title:</b> <%= data.safe_title %> <h3>
-    </div>
-    
-    <center><img src="<%=data.img%>" alt="<%= data.alt %> " max-width="300" max-height="500" style="margin-top:20px; margin-bottom:20px;"> </center>
+       <center> 
+        <p> <b>Description:</b> </p>
+        <h4 style="font-weight:normal; font-size:30px;"> <%= data.alt %> <h3>
+        <center><img src="<%=data.img%>" alt="<%= data.alt %> " max-width="300" max-height="500" style="margin-top:20px; margin-bottom:20px;"> </center>
 
+        </div></center>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
